Sun Jan 23 08:00:09 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_nth_len, str_utf8_nth): return the rest length together.

	* string.c (rb_str_substr): get rid of measure the length always
	  to improve performance for huge string.  [ruby-core:34648]

Sun Jan 23 00:40:10 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/test_syslog.rb: Fix to make a lot of test failure if
	  the platform doesn't support syslog.

Sat Jan 22 11:49:55 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: fixing merge key support
	  when multiple merge keys are specified.

	* test/psych/test_merge_keys.rb: tests for multi-merge key support

Sat Jan 22 11:33:04 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: merge keys are actually
	  part of YAML 1.1, so they should be supported.  Remove warning and
	  merge keys to parent.  [ruby-core:34679]

	* test/psych/test_merge_keys.rb: test for merge keys

Sat Jan 22 10:25:19 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/parser.c (parse): add the file name to the exception when
	  parse errors occur.

	* test/psych/test_parser.rb: test for parse error file name

Sat Jan 22 10:12:30 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/parser.c (parse): fix assertion error when reusing a
	  parser after an exception has been raised

	* test/psych/test_parser.rb: test for assertion error

Sat Jan 22 04:09:22 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/nodes/node.rb: Make Psych::Nodes::Node
	  enumerable.

	* ext/psych/lib/psych/visitors/depth_first.rb: Add a depth-first
	  visitor to enumerate over a YAML AST in a depth-first fashion

	* test/psych/nodes/test_enumerable.rb: test for enumerating nodes

	* test/psych/visitors/test_depth_first.rb: test for depth-first
	  visitor

Sat Jan 22 00:53:42 2011  Tanaka Akira  <akr@fsij.org>
